--- a/shared-links/docs002.html
+++ b/shared-links/docs002.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://drive.google.com/drive/u/0/folders/1rz5ayuhY9bzhweZqSmo1dHjgCTq85rdh'">
+    <meta http-equiv="refresh" content="0; URL='https://drive.google.com/file/d/1-LysdYoogw9xhCdh5GsSDq_XaBD2kMC6/view?usp=sharing'">
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://drive.google.com/drive/u/0/folders/1rz5ayuhY9bzhweZqSmo1dHjgCTq85rdh">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://drive.google.com/file/d/1-LysdYoogw9xhCdh5GsSDq_XaBD2kMC6/view?usp=sharing">click here</a>.</p>
   </body>
 </html>
