--- a/shared-links/docs002.html
+++ b/shared-links/docs002.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--meta http-equiv="refresh" content="0; URL='https://drive.google.com/file/d/1Ge0cTTMGAmH8gE07CZLIg72Nrq2NZ9HX/view?usp=sharing'"-->
+    <meta http-equiv="refresh" content="0; URL='https://drive.google.com/file/d/1Ge0cTTMGAmH8gE07CZLIg72Nrq2NZ9HX/view?usp=sharing'">
   </head>
   <body>
     <p>If you are not redirected, <a href="https://drive.google.com/file/d/1Ge0cTTMGAmH8gE07CZLIg72Nrq2NZ9HX/view?usp=sharing">click here</a>.</p>
